@@ -1,4 +1,4 @@
-.\" $Id: TIFFcolor.3tiff,v 1.3 2006-03-23 14:54:02 dron Exp $
+.\" $Id: TIFFcolor.3tiff,v 1.4 2009-11-30 12:22:26 fwarmerdam Exp $
 .\"
 .\" Copyright (c) 2003, Andrey Kiselev <dron@ak4719.spb.edu>
 .\"
@@ -33,7 +33,7 @@ TIFFXYZToRGB \- color conversion routines.
 .br
 .BI "void TIFFYCbCrtoRGB(TIFFYCbCrToRGB *" ycbcr ", uint32 " Y ", int32 " Cb ", int32 " Cr ", uint32 *" R ", uint32 *" G ", uint32 *" B " );"
 .sp
-.BI "int TIFFCIELabToRGBInit(TIFFCIELabToRGB *" cielab ", TIFFDisplay *" display ", float *" refWhite ");"
+.BI "int TIFFCIELabToRGBInit(TIFFCIELabToRGB *" cielab ", const TIFFDisplay *" display ", float *" refWhite ");"
 .br
 .BI "void TIFFCIELabToXYZ(TIFFCIELabToRGB *" cielab ", uint32 " L ", int32 " a ", int32 " b ", float *" X ", float *" Y ", float *" Z ");"
 .br
