@@ -1,3 +1,10 @@
+2009-11-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_color.c, libtiff/tif_getimage.c, libtiff/tiffio.h,
+	man/TIFFcolor.3tiff: Make TIFFDisplay argument in TIFFCIELabToRGBInit 
+	const, and display_sRGB static and const.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2124
+
 2009-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* libtiff 4.0.0alpha5 released.
